@@ -29,6 +29,7 @@ class User < ActiveRecord::Base
   has_many :projects, :conditions => {:deleted => false}, :order => 'name'
   has_many :project_favorites
   has_many :frames, :conditions => {:deleted => false}, :order => 'created_at'
+  has_many :templates, conditions: { :deleted => false }, :order => 'created_at'
   has_many :stickies, :conditions => {:deleted => false}, :order => 'created_at'
   has_many :comments, :conditions => {:deleted => false}, :order => 'created_at DESC'
 
@@ -91,6 +92,18 @@ class User < ActiveRecord::Base
   def all_viewable_frames
     @all_viewable_frames ||= begin
       Frame.current.with_project(self.all_viewable_projects.collect{|p| p.id}, self.id).order('created_at DESC')
+    end
+  end
+  
+  def all_templates
+    @all_templates ||= begin
+      Template.current.with_project(self.all_projects.collect{|p| p.id}, self.id).order('created_at DESC')
+    end
+  end
+  
+  def all_viewable_templates
+    @all_viewable_templates ||= begin
+      Template.current.with_project(self.all_viewable_projects.collect{|p| p.id}, self.id).order('created_at DESC')
     end
   end
   
