@@ -1,0 +1,11 @@
+<fieldset>
+  <legend>Sticky Template</legend>
+  <div class="field">
+    <b>Description:</b><br />
+
+    <pre><%= @item[:description] %></pre>
+    <br />
+    
+    <b>Offset from Initial Due Date:</b><%= @item[:interval] %> <%= @item[:units] %><br />
+  </div>
+</fieldset>
