@@ -1,0 +1,46 @@
+<div style="float:right">
+  Per Page 
+  <% [10,25,50].each do |count| %>
+    <span class="per_page">
+      <% if current_user.templates_per_page != count %>
+        <%= link_to count, "#", 'data-count' => count, 'data-object' => 'templates', :id => "count_#{count}" %>
+      <% else %>
+        <%= count %>
+      <% end %>
+    </span>
+  <% end %>
+</div>
+
+<div style="clear:both"></div>
+
+<table style="width:100%"><col width="10%"/><col width="10%"/><col width="80%"/><col width="1%"/>
+  <tr>
+    <th><%== sort_field_helper(@order, 'templates.name', 'Name', 'templates_search') %></th>
+    <th>Project</th>
+    <th>Items</th>
+    <th></th>
+  </tr>
+
+<% @templates.each do |template| %>
+  <tr>
+    <td><%= link_to template.name, template %></td>
+    <td><%= link_to template.project.name, template.project %></td>
+    <td>
+      <% template.items.each do |item| %>
+        <div style="border-bottom:1px solid #eee;margin-bottom:8px">
+          <i><%= item[:description] %></i>
+          <% if item[:interval] != 0 %> <b>+<%= item[:interval] %> <%= item[:units] %></b><% end %>
+        </div>
+      <% end %>
+    </td>
+    <td style="vertical-align:middle;white-space:nowrap">
+      <% if current_user.all_templates.include?(template) %>
+        <%= link_to image_tag('contour/addfile.png', :alt => ''), generate_stickies_template_path(template), confirm: "Are you sure you want to generate #{pluralize(template.items.size, 'Sticky')} from Template #{template.name}?", method: :post %>
+        <%= link_to image_tag('contour/delete.png', :alt => ''), template, confirm: "Are you sure you want to delete Template #{template.name}?", method: :delete %>
+      <% end %>
+    </td>
+  </tr>
+<% end %>
+</table>
+
+<center><%= paginate @templates %></center>
