@@ -1,0 +1,1 @@
+$("#items_container").append("<%= escape_javascript(render("edit_item")) %>");
