@@ -1,0 +1,3 @@
+<% @title = "Edit Template: #{@template.name}" %>
+
+<%= render 'form' %>
