@@ -1,0 +1,1 @@
+$("#templates").html("<%= escape_javascript(render("templates")) %>");
