@@ -1,0 +1,3 @@
+<% @title = "New Template" %>
+
+<%= render 'form' %>
