@@ -1,0 +1,27 @@
+<% @title = "Template: #{@template.name}" %>
+<h1><% if @template.project %><%= link_to @template.project.name, @template.project %> &raquo;<% end %><%= @title %></h1>
+
+<% if current_user.all_templates.include?(@template) %>
+  <%= link_to image_tag('contour/edit.png', :alt => '') + "Edit Template", edit_template_path(@template), :class => 'button' %>
+  <%= link_to image_tag('contour/delete.png', :alt => '') + "Delete Template", @template, :confirm => "Are you sure you want to delete Template #{@template.name}?", :method => :delete, :class => 'button negative' %>
+  <%= link_to image_tag('contour/addfile.png', :alt => '') + "Generate Stickies", generate_stickies_template_path(@template), method: :post, class: 'button positive' %>
+<% end %>
+<%= link_to image_tag('contour/mydocuments.png', :alt => '') + "View All Templates", templates_path, :class => 'button' %>
+
+<div style="clear:both"></div>
+<% if false %>
+<pre><%= @template.description %></pre>
+<br />
+<% end %>
+
+<p>
+  <b>User:</b>
+  <%= link_to @template.user.name, @template.user if @template.user %>
+</p>
+
+<p>
+  <b>Items:</b>
+  <% @template.items.each do |item| %>
+    <%= @item = item; render partial: 'show_item' %>
+  <% end %>
+</p>
