@@ -1,5 +1,10 @@
 == 0.11.0
 
+* Enhancements
+  * Adding support for templates
+    * Templates define a series of stickies
+    * Once created, a template can Generate Stickies for the project, with due_date (+1.day, +2.weeks, +5.weeks)
+
 == 0.10.0
 
 * Enhancements
